--- a/.env
+++ b/.env
@@ -1,7 +1,10 @@
 MONGODB_URL =mongodb+srv://marcus46:Guvi2023@ecomclust.urs0sbg.mongodb.net/Ecommerce
-PORT=3000
-CLOUD_NAME=dqefffvgt
-API_KEY=954289231362679
+PORT=5000
+CLOUD_NAME='dqefffvgt'
+API_KEY='954289231362679'
 SECRET_KEY=ucNW1rfN94qFI93jWKwBfJgyak0
 MAIL_ID=marcus.mathuram7@gmail.com
 JWT_SECRET=mysecret
+MP=hhpm stzo vdmz qydj
+
+CLIENT_ID=AWxufPpjkgxlPvqGU8nv48X6ieIl6E0BJrqM8BN3rSd_Y21C9TEvfSRr4NZOR3dvLxn3YOJrzhYGr-Yk
