--- a/.env
+++ b/.env
@@ -1,10 +1,11 @@
 MONGODB_URL =mongodb+srv://marcus46:Guvi2023@ecomclust.urs0sbg.mongodb.net/Ecommerce
 PORT=5000
-CLOUD_NAME='dqefffvgt'
-API_KEY='954289231362679'
-SECRET_KEY=ucNW1rfN94qFI93jWKwBfJgyak0
+CLOUD_NAME='dapu8uxzw'
+API_KEY='279893463328233'
+SECRET_KEY='FbYFOmGVMBm1FkLpQjbFlAzGlyc'
 MAIL_ID=marcus.mathuram7@gmail.com
 JWT_SECRET=mysecret
 MP=hhpm stzo vdmz qydj
 
 CLIENT_ID=AWxufPpjkgxlPvqGU8nv48X6ieIl6E0BJrqM8BN3rSd_Y21C9TEvfSRr4NZOR3dvLxn3YOJrzhYGr-Yk
+NODE_ENV=production node app.js
