--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ MP=hhpm stzo vdmz qydj
 
 CLIENT_ID=AWxufPpjkgxlPvqGU8nv48X6ieIl6E0BJrqM8BN3rSd_Y21C9TEvfSRr4NZOR3dvLxn3YOJrzhYGr-Yk
 NODE_ENV=production node app.js
+# Thanks
